# OpenCVDemo

./: CMakeLists.txt  README.md  main.cpp
core/AddingImages/: AddingImages.cpp  CMakeLists.txt  run.sh
core/DiscreteFourierTransform/: CMakeLists.txt  DiscreteFourierTransform.cpp  run.sh
core/ImageOperation/: CMakeLists.txt  ImageOperation.cpp  run.sh
core/LinearTransforms/: CMakeLists.txt  LinearTransforms.cpp  run.sh
core/ParallelFor/: .gitignore  CMakeLists.txt  ParallelFor.cpp  run.sh
core/ScanningImages/: CMakeLists.txt  ScanningImages.cpp  run.sh
core/UsingMask/: CMakeLists.txt  UsingMask.cpp  run.sh
core/UsingMat/: CMakeLists.txt  UsingMat.cpp  run.sh
core/XMLAndYAML/: CMakeLists.txt  XMLAndYAML.cpp  run.sh
highgui/AddingTrackbar/: AddingTrackbar.cpp  CMakeLists.txt  run.sh
imgproc/AddingBorders/: AddingBorders.cpp  CMakeLists.txt  run.sh
imgproc/AdvanceMorphology/: AdvanceMorphology.cpp  CMakeLists.txt  run.sh
imgproc/AffineTransformations/: AffineTransformations.cpp  CMakeLists.txt  run.sh
imgproc/BackProjection/: BackProjection.cpp  CMakeLists.txt  run.sh
imgproc/BasicDrawing/: BasicDrawing.cpp  CMakeLists.txt
imgproc/BasicThresholding/: BasicThresholding.cpp  CMakeLists.txt  run.sh
imgproc/CannyEdgeDetector/: CMakeLists.txt  CannyEdgeDetector.cpp  run.sh
imgproc/ConvexHull/: CMakeLists.txt  ConvexHull.cpp  run.sh
imgproc/CreatingBounding/: CMakeLists.txt  CreatingBounding.cpp  run.sh
imgproc/CreatingBounding2/: CMakeLists.txt  CreatingBounding2.cpp  run.sh
imgproc/DistanceImageSegmentation/: CMakeLists.txt  DistanceImageSegmentation.cpp  run.sh
imgproc/ErodingAndDilating/: CMakeLists.txt  ErodingAndDilating.cpp  make.sh  run.sh
imgproc/FindingContours/: CMakeLists.txt  FindingContours.cpp  run.sh
imgproc/HistogramCalculation/: CMakeLists.txt  HistogramCalculation.cpp  run.sh
imgproc/HistogramComparison/: CMakeLists.txt  HistogramComparison.cpp  run.sh
imgproc/HistogramEqualization/: CMakeLists.txt  HistogramEqualization.cpp  run.sh
imgproc/HitOrMiss/: CMakeLists.txt  HitOrMiss.cpp  run.sh
imgproc/HorizontalAndVertical/: CMakeLists.txt  HorizontalAndVertical.cpp  run.sh
imgproc/HoughCircleTransform/: CMakeLists.txt  HoughCircleTransform.cpp  run.sh
imgproc/RandomAndText/: CMakeLists.txt  RandomAndText.cpp  run.sh
starting/UsingOpenCV/: CMakeLists.txt  UsingOpenCV.cpp  run.sh
(+33 files in other folders)
